tests/type_checker/pass/client.core
module 'client' ['module_info'/0,
		 'module_info'/1,
		 'negation'/2]
    attributes [%% Line 1
		'file' =
		    %% Line 1
		    [{[116|[101|[115|[116|[115|[47|[116|[121|[112|[101|[95|[99|[104|[101|[99|[107|[101|[114|[47|[112|[97|[115|[115|[47|[99|[108|[105|[101|[110|[116|[46|[101|[114|[108]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],1}],
		%% Line 9
		'emil' =
		    %% Line 9
		    [102|[117|[110]]],
		%% Line 11
		'type' =
		    %% Line 11
		    [{'new',{'type',{11,16},'tuple',[]},[]}],
		%% Line 12
		'type' =
		    %% Line 12
		    [{'consume',{'type',{12,20},'tuple',[]},[]}],
		%% Line 17
		'session' =
		    %% Line 17
		    [39|[110|[101|[103|[97|[116|[105|[111|[110|[39|[40|[110|[101|[119|[40|[43|[123|[110|[101|[103|[40|[33|[105|[110|[116|[101|[103|[101|[114|[46|[32|[63|[105|[110|[116|[101|[103|[101|[114|[46|[32|[101|[110|[100|[46|[41|[44|[32|[97|[100|[100|[40|[33|[105|[110|[116|[101|[103|[101|[114|[46|[32|[33|[105|[110|[116|[101|[103|[101|[114|[46|[32|[63|[105|[110|[116|[101|[103|[101|[114|[46|[32|[101|[110|[100|[46|[41|[125|[46|[41|[44|[95|[41]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],
		%% Line 19
		'spec' =
		    %% Line 19
		    [{{'negation',2},[{'type',{19,15},'fun',[{'type',{19,15},'product',[{'user_type',{19,16},'new',[]}|[{'type',{19,22},'integer',[]}]]}|[{'type',{19,36},'integer',[]}]]}]}]]
'negation'/2 =
    %% Line 20
    ( fun (_0,_1) ->
	  do  %% Line 21
	      call 'io':'format'
		  ([68|[69|[66|[85|[71|[58|[32|[83|[116|[97|[114|[116|[101|[100|[32|[110|[101|[103|[126|[110]]]]]]]]]]]]]]]]]]]])
	      let <SessionID> =
		  call %% Line 23
		       'gen_server_plus':%% Line 23
					 'new'
		      (_0)
	      in  do  %% Line 24
		      call 'io':'format'
			  ([68|[69|[66|[85|[71|[58|[32|[67|[108|[105|[101|[110|[116|[32|[115|[116|[97|[114|[116|[101|[100|[32|[115|[101|[115|[115|[105|[111|[110|[126|[110]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]])
		      do  %% Line 25
			  ( call ( 'gen_server_plus'
				   -| ['result_not_wanted'] ):( 'call'
								-| ['result_not_wanted'] )
				(_0, SessionID, ( 'neg'
						  -| ['result_not_wanted'] ))
			    -| ['result_not_wanted'] )
			  do  %% Line 26
			      call 'io':'format'
				  ([68|[69|[66|[85|[71|[58|[32|[67|[108|[105|[101|[110|[116|[32|[99|[104|[111|[115|[101|[32|[110|[101|[103|[126|[110]]]]]]]]]]]]]]]]]]]]]]]]])
			      let <Res> =
				  call %% Line 33
				       'gen_server_plus':%% Line 33
							 'call'
				      (_0, %% Line 33
					   SessionID, _1)
			      in  do  %% Line 34
				      call 'io':'format'
					  ([67|[108|[105|[101|[110|[116|[32|[115|[101|[110|[116|[32|[105|[110|[116|[101|[103|[101|[114|[32|[97|[110|[100|[32|[103|[111|[116|[32|[114|[101|[115|[112|[111|[110|[115|[101|[58|[32|[126|[119|[126|[110]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]], [Res|[]])
				      %% Line 35
				      Res
      -| [{'function',{'negation',2}}] )
'module_info'/0 =
    ( fun () ->
	  call 'erlang':'get_module_info'
	      ('client')
      -| [{'function',{'module_info',0}}] )
'module_info'/1 =
    ( fun (_0) ->
	  call 'erlang':'get_module_info'
	      ('client', ( _0
			   -| [{'function',{'module_info',1}}] ))
      -| [{'function',{'module_info',1}}] )
end