tests/type_checker/fail/client.core
module 'client' ['module_info'/0,
		 'module_info'/1,
		 'negation'/2]
    attributes [%% Line 1
		'file' =
		    %% Line 1
		    [{[116|[101|[115|[116|[115|[47|[116|[121|[112|[101|[95|[99|[104|[101|[99|[107|[101|[114|[47|[102|[97|[105|[108|[47|[99|[108|[105|[101|[110|[116|[46|[101|[114|[108]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],1}],
		%% Line 9
		'type' =
		    %% Line 9
		    [{'new',{'type',{9,16},'tuple',[]},[]}],
		%% Line 13
		'session' =
		    %% Line 13
		    [39|[110|[101|[103|[97|[116|[105|[111|[110|[39|[40|[110|[101|[119|[40|[33|[105|[110|[116|[101|[103|[101|[114|[46|[32|[63|[105|[110|[116|[101|[103|[101|[114|[46|[32|[33|[115|[116|[114|[105|[110|[103|[46|[32|[63|[105|[110|[116|[101|[103|[101|[114|[46|[41|[44|[95|[41|[32]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],
		%% Line 14
		'spec' =
		    %% Line 14
		    [{{'negation',2},[{'type',{14,15},'fun',[{'type',{14,15},'product',[{'user_type',{14,16},'new',[]}|[{'type',{14,22},'integer',[]}]]}|[{'type',{14,36},'integer',[]}]]}]}]]
'negation'/2 =
    %% Line 15
    ( fun (_0,_1) ->
	  do  %% Line 16
	      call 'io':'format'
		  ([68|[69|[66|[85|[71|[58|[32|[83|[116|[97|[114|[116|[101|[100|[32|[110|[101|[103|[126|[110]]]]]]]]]]]]]]]]]]]])
	      let <SessionID> =
		  call %% Line 18
		       'gen_server_plus':%% Line 18
					 'new'
		      (_0)
	      in  let <Res> =
		      call %% Line 19
			   'gen_server_plus':%% Line 19
					     'call'
			  (_0, %% Line 19
			       SessionID, %% Line 19
					  'neg')
		  in  do  %% Line 20
			  call 'io':'format'
			      ([68|[69|[66|[85|[71|[58|[32|[67|[108|[105|[101|[110|[116|[32|[103|[111|[116|[32|[114|[101|[97|[100|[121|[126|[110]]]]]]]]]]]]]]]]]]]]]]]]])
			  %% Line 27
			  case call 'gen_server_plus':'call'
				   (_0, SessionID, _1) of
			    <_7>
				when call 'erlang':'=:='
				      (_7,
				       Res) ->
				%% Line 28
				call 'io':'format'
				    ([71|[111|[116|[32|[114|[101|[115|[112|[111|[110|[115|[101|[58|[32|[126|[119|[126|[110]]]]]]]]]]]]]]]]]], [Res|[]])
			    ( <_4> when 'true' ->
				  primop 'match_fail'
				      ({'badmatch',_4})
			      -| ['compiler_generated'] )
			  end
      -| [{'function',{'negation',2}}] )
'module_info'/0 =
    ( fun () ->
	  call 'erlang':'get_module_info'
	      ('client')
      -| [{'function',{'module_info',0}}] )
'module_info'/1 =
    ( fun (_0) ->
	  call 'erlang':'get_module_info'
	      ('client', ( _0
			   -| [{'function',{'module_info',1}}] ))
      -| [{'function',{'module_info',1}}] )
end